refactor: Remove misc.xml and update gitignore
This commit removes the `.idea/misc.xml` file, which contained device streaming configuration. The `.gitignore` file has been updated to exclude several `.idea` files.

Additionally, the `compileSdk` and `targetSdk` versions have been updated from 35 to 36 in `app/build.gradle.kts`.

A new snapshot repository for AndroidX artifacts has been added to `settings.gradle.kts`.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.idea/vcs.xml
+/.idea/appInsightsSettings.xml
+/.idea/gradle.xml
+/.idea/deploymentTargetSelector.xml
+/.idea/AndroidProjectSystem.xml
+/.idea/runConfigurations.xml
+/.idea/compiler.xml
+/.idea/migrations.xml
+/.idea/inspectionProfiles/Project_Default.xml
