feat: Integrate Navigation 3 with Serialization and Lifecycle ViewModel
This commit introduces several enhancements to the navigation system by integrating Navigation 3 with Kotlinx Serialization and Lifecycle ViewModel support.

Key changes:
- Made `NavKey` implementations `Serializable` by sealing `NavigationEntries.kt` into `Scenes`.
- `MovieUIModel` is now `@Serializable`.
- Added `kotlinx-serialization-core` and `androidx-lifecycle-viewmodel-navigation3` dependencies.
- Updated `AppNavDisplay` to use `NavBackStack` and Navigation 3 entry decorators (`rememberSceneSetupNavEntryDecorator`, `rememberSavedStateNavEntryDecorator`, `rememberViewModelStoreNavEntryDecorator`).
- Replaced `mutableStateListOf` with `rememberNavBackStack` in `MainActivity.kt`.
- Updated `addRouteSafely` extension to be specific to `NavKey`.
- Modified `SharingStarted.WhileSubscribed()` to `SharingStarted.WhileSubscribed(5000L)` in ViewModels.
- Implemented pagination logic in `MovieListViewModel`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,9 +14,9 @@ koin = "4.0.4"
 
 coil = "2.7.0"
 
-kotlinxSerializationJson = "1.8.1"
 
-
+nav3Lifecycle = "1.0.0-alpha01"
+kotlinxSerializationCore = "1.8.1"
 navigation3 = "1.0.0-alpha02"
 nav3Material = "1.0.0-SNAPSHOT"
 
@@ -42,7 +42,6 @@ ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.r
 ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" } # Opsiyonel, loglama için
-kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
 # Koin (Dependency Injection)
 koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
@@ -52,9 +51,11 @@ koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compos
 androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "navigation3" }
 androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "navigation3" }
 
-androidx-material3-navigation3 = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation3", version.ref = "nav3Material" }
 
-androidx-adaptive-layout = { group = "androidx.compose.material3.adaptive", name = "adaptive-layout" }
+androidx-material3-navigation3 = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation3", version.ref = "nav3Material" }
+androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "nav3Lifecycle" }
+kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinxSerializationCore" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationCore" }
 
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 
