--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,24 @@
 [versions]
-agp = "8.10.0"
-kotlin = "2.1.21"
-coreKtx = "1.16.0"
+agp = "8.13.1"
+kotlin = "2.2.21"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.9.0"
-activityCompose = "1.10.1"
-composeBom = "2025.05.01"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+lifecycleRuntimeKtx = "2.10.0"
+activityCompose = "1.12.0"
+composeBom = "2025.11.01"
 
-ktor = "3.1.3"
-koin = "4.0.4"
+ktor = "3.3.2"
+koin = "4.1.1"
 
 coil = "2.7.0"
+kotlinxSerializationJson = "1.9.0"
 
 
-nav3Lifecycle = "1.0.0-alpha01"
-kotlinxSerializationCore = "1.8.1"
-navigation3 = "1.0.0-alpha02"
+navigation3 = "1.0.0"
+nav3Lifecycle = "2.10.0"
+kotlinxSerializationCore = "1.9.0"
 nav3Material = "1.0.0-SNAPSHOT"
 
 [libraries]
@@ -42,6 +43,7 @@ ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.r
 ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" } # Opsiyonel, loglama için
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
 # Koin (Dependency Injection)
 koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
@@ -55,7 +57,6 @@ androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", vers
 androidx-material3-navigation3 = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation3", version.ref = "nav3Material" }
 androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "nav3Lifecycle" }
 kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinxSerializationCore" }
-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationCore" }
 
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 
